--- a/index.html
+++ b/index.html
@@ -88,15 +88,14 @@
 
                     <div class="column">
                         <div class="text-pretitle with-line">
-                            Hello World
+                            Hey Everyone
                         </div>
 
                         <h1 class="text-huge-title">
-                            I am Luther, <br>
-                            a digital designer <br>
-                            & frontend <br> 
-                            developer based <br>
-                            in Somewhere.
+                            I am Shakeel Amath, <br>
+                            Designing with purpose,<br> 
+                            developing with precision.<br>
+                            
                         </h1>
                     </div>
 
@@ -124,22 +123,18 @@
                 <div class="row about-info wide" data-animate-block>
 
                     <div class="column lg-6 md-12 about-info__pic-block">
-                        <img src="images/about-photo.jpg" 
-                             srcset="images/about-photo.jpg 1x, images/about-photo@2x.jpg 2x" alt="" class="about-info__pic" data-animate-el>
+                        <img src="images/shakeelamathcv.jpg" 
+                             srcset="images/shakeelamathcv.jpg 1x, images/about-photo@2x.jpg 2x" alt="" class="about-info__pic" data-animate-el>
                     </div>
 
                     <div class="column lg-6 md-12">
                         <div class="about-info__text" >
 
                             <h2 class="text-pretitle with-line" data-animate-el>
-                                About
+                                Frontend Dev with AI Ambitions
                             </h2>
                             <p class="attention-getter" data-animate-el>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim 
-                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex 
-                                ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate 
-                                velit esse cillum dolore eu fugiat nulla pariatur.
+                                Hi, I'm Shakeel Amath! A frontend developer with a knack for creating clean, responsive, and user-friendly interfaces. I'm currently pursuing a BSc in AI, exploring the intersection of intelligent systems and great design. Whether it's crafting smooth UIs or debugging that one stubborn CSS issue, I’m all about building efficient and engaging digital experiences.
                             </p>
                             <a href="#0" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
